XWIKI-12480: Split the space name in Gadget Title * Corrected specificity of the CSS selector * Added missing space

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/dashboard/dashboard.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/dashboard/dashboard.css
@@ -104,7 +104,7 @@
 }
 
 /* Hide gadget title, when wider than gadget width */
-.gadget-title.wikigeneratedheader {
-  overflow:hidden;
+.gadget-title {
+  overflow: hidden;
   text-overflow: ellipsis;
 }
